--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,387 @@
-/* место для вашего кода */
+/*--- Header---*/
+
+.header {
+  margin: 92px 50px 92px 50px;
+  display: flex;
+  justify-content: space-between;
+  max-width: 1340px;
+  padding-bottom: 4px;
+}
+
+.header__menu {
+  display: flex;
+  padding-bottom: 4px;
+}
+
+.header__list {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  justify-content: start; 
+  margin-top: 5px;
+}
+
+.header__list-item {
+  list-style: circle;
+}
+
+.header__list-item_not-bullit {
+  list-style: none;
+}
+
+.header__link {
+  font-weight: 400;
+  border-bottom: 1px solid #000000;
+  font-size: 18px;
+  text-decoration: none;
+  padding: 1px;
+}
+
+.header__link_active {
+  border-bottom: none;
+  text-decoration: none;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+  margin-right: 149px;
+}
+
+.header__logo {
+  height: 100%;
+  width: 100%;
+}
+
+.address {
+  font-family: 'Raleway', 'Arial', sans-serif;
+  color: #000000;
+  font-size: 18px;
+  font-weight: 400;
+  all: initial;
+  max-width: 240px;
+  line-height: 24.3px;
+}
+
+.header__address {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  padding-bottom: 2px;
+}
+
+/*--- COVER ---*/
+
+.cover {
+  background-image: url('../images/cover.jpg');
+  background-repeat: no-repeat;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 180px;
+  padding: 165px 50px 50px 50px;
+  z-index: 0;
+}
+
+.overlay {
+  position: absolute;
+  background-color: rgb(0 0 0 / 0.6);
+  height: 100%;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.cover__title {
+  font-weight: 700;
+  font-size: 100px;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 30px;
+  z-index: 2;
+}
+
+.aligned-text__left {
+  margin-bottom: 20px;
+  text-align: left;
+  display: block;
+  line-height: 115%;
+}
+
+.aligned-text__center {
+  margin-bottom: 20px;
+  text-align: center;
+  display: block;
+  line-height: 100%;
+}
+
+.aligned-text__right {
+  margin-bottom: 135px;
+  text-align: right; 
+  display: block;
+  line-height: 100%;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.not-letter-spacing {
+  letter-spacing: initial;
+}
+
+.cover__text {
+  font-style: normal;
+  color: #ffffff;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-top: 126px;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+  position: relative;
+  word-spacing: 18px;
+  gap: 78px;
+  z-index: 2;
+}
+
+.cover__text-description {
+  text-align: center;
+}
+
+.bet-button {
+  font-weight: 400;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  font-size: 22px;
+  text-transform: uppercase;
+  background-color: transparent;
+  padding: 12px 32px 12px 32px;
+}
+
+/*--- LOTS ---*/
+
+.lots {
+  margin: 0 0 180px 0;
+}
+
+.lots__title {
+  font-weight: 700;
+  font-size: 40px;
+  color: #000000;
+  margin: 0 0 27px 90px;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0 50px 30px 50px;
+}
+
+.lots__card-list-item {
+  display: flex;
+  flex-grow: 1;
+  justify-content: start;
+  max-width: 380px;
+  min-height: 450px;
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  height: 100%;
+  width: 100%;
+  min-height: 450px;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.card__content {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  color: #ffffff;
+  text-decoration: underline;
+  text-transform: uppercase;
+  padding: 50px 40px 0 40px;
+  line-height: 120%;
+  z-index: 2;
+}
+
+.card__text {
+  font-weight: 400;
+  font-size: 20px;
+  color: #ffffff;
+  padding: 0 40px 50px 40px;
+  line-height: 120%;
+  z-index: 2;
+}
+
+.lots__look-more-link {
+  font-weight: 400;
+  font-size: 20px;
+  color: #000000;
+  text-transform: lowercase;
+  margin: 0 0 0 90px;
+  border-bottom: 1px solid #000000;
+  text-decoration: none;
+  padding: 1px;
+}
+
+/*--- Картинки для секции LOT---*/
+
+.card_about_film {
+  background-image: url('../images/card-lot-01.jpg');
+}
+
+.card_about_book {
+  background-image: url('../images/card-lot-02.jpg');
+}
+
+.card_about_picture {
+  background-image: url('../images/card-lot-03.jpg');
+}
+
+/*--- секция про Аукцион ---*/
+
+.about {
+  margin: 0 50px 180px 50px;
+}
+
+.about__column {
+  display: grid;
+  grid-template-columns: 430px 1fr;
+  column-gap: 25px;
+  grid-template-rows: 487px;
+}
+
+.about__logo-container {
+  justify-content: center;
+  display: flex;
+}
+
+.about__logo {
+  height: 240px;
+  width: 240px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #000000;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__description-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  display: flex;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  justify-content: start;
+  align-items: center;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  display: flex;
+  color: #000000;
+  flex-direction: column;
+  gap: 25px;
+}
+
+/*--- Footer----*/
+
+.footer {
+  margin: 0 50px 90px 50px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 3px;
+}
+
+.footer__address {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+}
+
+.footer__link {
+  font-weight: 400;
+  font-size: 18px;
+  border-bottom: 1px solid #000000;
+  text-decoration: none;
+  padding: 1px;
+}
+
+.footer__link_active {
+  text-decoration: none;
+  border-bottom: none;
+}
+
+.footer__menu {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__menu-list {
+  display: flex;
+  background-color: #ffffff;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer__menu-list-item {
+  color: #000000;
+  list-style: none;
+}
+
+.footer__social-list {
+  display: flex;
+  list-style: none;
+  list-style: none;
+  justify-content: end;
+  gap: 48px;
+}
+
+.footer__social-list-item {
+  list-style: none;
+}
+
+.footer__social-link {
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  height: 48px;
+}
+
