--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,12 @@
 /*--- Header---*/
 
 .header {
-  margin: 92px 50px 92px 50px;
-  display: flex;
-  justify-content: space-between;
+  margin: 92px 49px 94px 51px;
+  display: grid;
+  align-items: center;
   max-width: 1340px;
   padding-bottom: 4px;
+  grid-template-columns: 1fr min-content 1fr;
 }
 
 .header__menu {
@@ -45,7 +46,6 @@
 .header__logo-image {
   width: 148px;
   height: 105px;
-  margin-right: 149px;
 }
 
 .header__logo {
@@ -54,11 +54,11 @@
 }
 
 .address {
+  justify-self: end;
   font-family: 'Raleway', 'Arial', sans-serif;
   color: #000000;
   font-size: 18px;
   font-weight: 400;
-  all: initial;
   max-width: 240px;
   line-height: 24.3px;
 }
@@ -81,7 +81,7 @@
   background-size: cover;
   background-position: center;
   margin-bottom: 180px;
-  padding: 165px 50px 50px 50px;
+  padding: 260px 50px 50px 50px;
   z-index: 0;
 }
 
@@ -104,24 +104,24 @@
   text-transform: uppercase;
   letter-spacing: 30px;
   z-index: 2;
+  margin-bottom: 135px; 
 }
 
 .aligned-text__left {
-  margin-bottom: 20px;
+  gap: 20;
   text-align: left;
   display: block;
-  line-height: 115%;
+  line-height: 120%;
 }
 
 .aligned-text__center {
-  margin-bottom: 20px;
+  gap: 20;
   text-align: center;
   display: block;
-  line-height: 100%;
+  line-height: 120%;
 }
 
 .aligned-text__right {
-  margin-bottom: 135px;
   text-align: right; 
   display: block;
   line-height: 100%;
@@ -156,6 +156,7 @@
 }
 
 .bet-button {
+  font-family: 'Raleway', 'Arial', sans-serif;
   font-weight: 400;
   color: #ffffff;
   border: 1px solid #ffffff;
@@ -183,14 +184,13 @@
   gap: 25px;
   flex-wrap: wrap;
   list-style: none;
-  margin: 0 50px 30px 50px;
 }
 
 .lots__card-list-item {
   display: flex;
   flex-grow: 1;
   justify-content: start;
-  max-width: 380px;
+  max-width: 334px;
   min-height: 450px;
 }
 
@@ -238,14 +238,16 @@
 }
 
 .lots__look-more-link {
+  display: inline-block;
   font-weight: 400;
   font-size: 20px;
   color: #000000;
   text-transform: lowercase;
-  margin: 0 0 0 90px;
+  margin-top: 30px;
+  margin-left: 40px;
   border-bottom: 1px solid #000000;
   text-decoration: none;
-  padding: 1px;
+  text-underline-offset: 5px;
 }
 
 /*--- Картинки для секции LOT---*/
@@ -265,14 +267,14 @@
 /*--- секция про Аукцион ---*/
 
 .about {
-  margin: 0 50px 180px 50px;
+  margin-left: -50px;
+  margin-bottom: 180px;
 }
 
 .about__column {
   display: grid;
   grid-template-columns: 430px 1fr;
-  column-gap: 25px;
-  grid-template-rows: 487px;
+  gap: 8px 25px;
 }
 
 .about__logo-container {
@@ -283,7 +285,7 @@
 .about__logo {
   height: 240px;
   width: 240px;
-  display: grid;
+  display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
@@ -315,8 +317,9 @@
   font-weight: 400;
   font-size: 20px;
   display: flex;
-  color: #000000;
   flex-direction: column;
+  grid-column: 2;
+  color: #000000;
   gap: 25px;
 }
 
@@ -357,7 +360,7 @@
   display: flex;
   background-color: #ffffff;
   flex-direction: column;
-  text-align: center;
+  text-align: center; 
 }
 
 .footer__menu-list-item {
